--- a/photo_archiver.opam
+++ b/photo_archiver.opam
@@ -6,15 +6,16 @@ maintainer: "Omer Strumpf <omstrumpf@gmail.com>"
 authors: "Omer Strumpf <omstrumpf@gmail.com>"
 license: "MIT"
 depends: [
-    "ocaml"
-    "core"
     "async"
+    "async_ssl"
     "cohttp"
     "cohttp-async"
-    "async_ssl"
-    "uri"
-    "yojson"
+    "core"
+    "ocaml"
     "ppx_jane"
     "ppx_yojson_conv"
+    "sqlite3"
+    "uri"
+    "yojson"
     ]
 build: ["dune" "build" "-p" name "-j" jobs]
