updating package config

--- a/photo_archiver.opam
+++ b/photo_archiver.opam
@@ -2,9 +2,11 @@ opam-version: "2.0"
 name: "photo_archiver"
 version: "0.1"
 synopsis: "Archives photos from Google Photos"
-maintainer: "Omer Strumpf <omstrumpf@gmail.com>"
-authors: "Omer Strumpf <omstrumpf@gmail.com>"
+maintainer: "Omer Strumpf <me@omer.dev>"
+authors: "Omer Strumpf <me@omer.dev>"
 license: "MIT"
+homepage: "https://github.com/omstrumpf/photo_archiver"
+bug-reports: "bugs@omer.dev"
 depends: [
     "async"
     "async_ssl"
